# counteragent

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  Roadmap.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
concepts/: TEMPLATE.md  agent-chain.md  agent-inject.md  chain.md  framework-agnostic-mapping.md  inject.md  mcp-proxy.md
docs/: Architecture.md  Roadmap.md  github-advisory-integration.md  owasp_mapping.md
documentation/: cli-reference.mdx  docs.json  introduction.mdx  quickstart.mdx  scanners.mdx
fixtures/: proxy_vuln_injection.py
fixtures/vulnerable_servers/: vuln_tool_poison.py
src/counteragent/: __init__.py  __main__.py  cli.py
src/counteragent/audit/: __init__.py  cli.py  orchestrator.py
src/counteragent/audit/mcp_client/: __init__.py  connector.py  discovery.py
src/counteragent/audit/payloads/: __init__.py
src/counteragent/audit/reporting/: json_report.py  sarif_report.py  severity.py
src/counteragent/audit/scanner/: __init__.py  audit_telemetry.py  auth.py  base.py  context_sharing.py  injection.py  permissions.py  prompt_injection.py  registry.py  shadow_servers.py  supply_chain.py  token_exposure.py  tool_poisoning.py
src/counteragent/chain/: __init__.py  cli.py
src/counteragent/core/: __init__.py  connection.py  discovery.py  evidence.py  models.py  owasp.py  transport.py
src/counteragent/inject/: __init__.py  cli.py
src/counteragent/proxy/: __init__.py  cli.py  intercept.py  models.py  pipeline.py  replay.py  session_store.py
src/counteragent/proxy/adapters/: __init__.py
src/counteragent/proxy/tui/: __init__.py  app.py  messages.py
src/counteragent/scan/: __init__.py  cli.py  orchestrator.py
src/counteragent/scan/reporting/: json_report.py
src/counteragent/scan/scanner/: __init__.py  audit_telemetry.py  auth.py  context_sharing.py  (+8 more)
tests/: conftest.py
tests/audit/: conftest.py  test_orchestrator.py  test_sarif_report.py  test_smoke.py
tests/audit/test_mcp_client/: test_integration.py
tests/audit/test_scanners/: test_audit_telemetry.py  test_auth.py  test_context_sharing.py  test_injection.py  test_permissions.py  test_prompt_injection.py  test_shadow_servers.py  test_supply_chain.py  test_token_exposure.py  test_tool_poisoning.py
tests/proxy/: test_cli.py  test_correlation.py  test_integration_stdio.py  test_intercept.py  test_models.py  test_pipeline.py  test_replay.py  test_session_store.py
tests/proxy/test_adapters/: test_stdio.py
tests/proxy/test_tui/: test_app.py  test_intercept_controls.py  test_message_detail.py  test_message_filter.py  test_message_list.py  test_messages.py  test_status_bar.py  test_tui_replay.py
tests/scan/: conftest.py  test_orchestrator.py
tests/scan/test_scanners/: test_audit_telemetry.py  test_auth.py  test_context_sharing.py  test_injection.py  test_permissions.py  test_prompt_injection.py  test_shadow_servers.py  test_supply_chain.py  test_token_exposure.py  test_tool_poisoning.py
(+4 files in other folders)
